# Name-That-Hash

./: .all-contributorsrc  DockerFile  Makefile  README.md  example  leonardo  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: python.yaml
images/: first.cast  robocowboy
name_that_hash/: HashTypeObj.py  __init__.py  __main__.py  check_hashes.py  hash  hash_info.py  hash_namer.py  hashes.py  main.py  name_that_hash.py  prettifier.py  runner.py
tests/: test_click.py  test_hashcat.py  test_main.py  test_name_that_hash.py
tests/mocks/: hashes.txt
