[tool.poetry]
name = "name-that-hash"
version = "0.0.1"
description = "The Modern Hash Identifcation System"
authors = ["brandon <brandon@skerritt.blog>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
rich = "^9.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nth = "name_that_hash:runner"
# nth = "name_that_hash.runner.main"
# namethathash = "name_that_hash.runner.main"
