[tool.poetry]
name = "name-that-hash"
version = "1.7.0"
description = "The Modern Hash Identifcation System"
authors = ["brandon <brandon@skerritt.blog>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
rich = ">=9.9,<11.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nth = "name_that_hash.runner:main"
name-that-hash = "name_that_hash.runner:main"
